# remote_switch

./: .gitignore  README.md
hardware/remote-switch/: remote-switch-B_Cu.gbl  remote-switch-B_Cu.gbr  remote-switch-B_Mask.gbr  remote-switch-B_Mask.gbs  remote-switch-B_Paste.gbp  remote-switch-B_Paste.gbr  remote-switch-B_Silkscreen.gbo  remote-switch-B_Silkscreen.gbr  remote-switch-Edge_Cuts.gbr  remote-switch-Edge_Cuts.gm1  remote-switch-F_Cu.gbr  remote-switch-F_Cu.gtl  remote-switch-F_Mask.gbr  remote-switch-F_Mask.gts  remote-switch-F_Paste.gbr  remote-switch-F_Paste.gtp  remote-switch-F_Silkscreen.gbr  remote-switch-F_Silkscreen.gto  remote-switch-job.gbrjob  remote-switch.drl  remote-switch.kicad_pcb  remote-switch.kicad_prl  remote-switch.kicad_pro  remote-switch.kicad_sch  remote-switch.kicad_sch-bak
mcpwm_servo_control/main/: mcpwm_servo_control_example_main.c
structure/: 智能开关2.0.SLDPRT  智能开关2.0.STL
tcp/: Makefile  partitions.csv  sdkconfig  sdkconfig.old
tcp/main/: CMakeLists.txt  app_main.c  component.mk  ir.c  ir.h  main.h  mqtt.c  ota_updata.c  ota_updata.h  pwm.c  pwm.h  storage.c  storage.h
