idf_component_register(SRCS "storage.c" "ir.c" "mqtt.c" "pwm.c" "app_main.c" "./ir_decoder/src/ir_ac_apply.c" "./ir_decoder/src/ir_ac_binary_parse.c" "./ir_decoder/src/ir_ac_build_frame.c" "./ir_decoder/src/ir_ac_parse_forbidden_info.c" "./ir_decoder/src/ir_decode.c" "./ir_decoder/src/ir_tv_control.c" "./ir_decoder/src/ir_utils.c" "./ir_decoder/src/ir_ac_control.c" "./ir_decoder/src/ir_ac_parse_frame_info.c" "./ir_decoder/src/ir_ac_parse_parameter.c" "ir.c" "storage.c"
                    INCLUDE_DIRS "." "./ir_decoder/src/include"
                    EMBED_TXTFILES ${project_dir}/server_certs/ca_cert.pem)
spiffs_create_partition_image(storage ../root/binfile FLASH_IN_PROJECT)